--- a/app/Resources/views/LoginLayout.html.twig
+++ b/app/Resources/views/LoginLayout.html.twig
@@ -41,8 +41,8 @@
     <body class=" login">
         <!-- BEGIN LOGO -->
         <div class="logo">
-            <a href="index.html">
-                <img src="../assets/pages/img/logo-big.png" alt="" /> </a>
+            <a href="">
+                <img src="{{ asset('ressources/images/logo2.png')}}" alt="" /> </a>
         </div>
         <!-- END LOGO -->
         <!-- BEGIN LOGIN -->
@@ -76,7 +76,7 @@
         </div>
         <!-- END LOGIN -->
         <!-- BEGIN COPYRIGHT -->
-        <div class="copyright"> 2016 &copy; Eden'Art - Connexion au BackOffice. </div>
+        <div class="copyright"> 2016 &copy; ARFIS - By Eden'Art. </div>
         <!-- END COPYRIGHT -->
         <!--[if lt IE 9]>
 <script src="../assets/global/plugins/respond.min.js"></script>
