--- a/app/Resources/views/BOLayout.html.twig
+++ b/app/Resources/views/BOLayout.html.twig
@@ -129,8 +129,8 @@
                                       <li class="dropdown more-dropdown-sub">
                                           <a href="javascript:;"> Rayonnage </a>
                                           <ul class="dropdown-menu">
-                                            <li><a href="#">Ajouter</a></li>
-                                            <li><a href="#">Liste</a></li>
+                                            <li><a href="{{ path('rayonnage_new')}}">Ajouter</a></li>
+                                            <li><a href="{{ path('rayonnage_index')}}">Liste</a></li>
                                           </ul>
                                       </li>
                                       <li class="dropdown more-dropdown-sub">
