--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -27,7 +27,7 @@
                 <i class="widget-thumb-icon bg-green icon-bulb"></i>
                 <div class="widget-thumb-body">
                     <span class="widget-thumb-subtitle"></span>
-                    <span class="widget-thumb-body-stat" data-counter="counterup" data-value="7,644">0</span>
+                    <span class="widget-thumb-body-stat" data-counter="counterup" data-value="{{ nbRayonnage }}">0</span>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
 
 </div>
 <div class="row">
-    
+
 </div>
 
 <!-- END PAGE BASE CONTENT -->
