--- a/app/Resources/views/BOLayout.html.twig
+++ b/app/Resources/views/BOLayout.html.twig
@@ -143,8 +143,8 @@
                                       <li class="dropdown more-dropdown-sub">
                                           <a href="javascript:;"> Serie </a>
                                           <ul class="dropdown-menu">
-                                            <li><a href="#">Ajouter</a></li>
-                                            <li><a href="#">Liste</a></li>
+                                            <li><a href="{{ path('serie_new')}}">Ajouter</a></li>
+                                            <li><a href="{{ path('serie_index')}}">Liste</a></li>
                                           </ul>
                                       </li>
                                       <li class="dropdown more-dropdown-sub">
