Generation CRUD et mise en page de Sort Final

--- a/app/Resources/views/BOLayout.html.twig
+++ b/app/Resources/views/BOLayout.html.twig
@@ -178,8 +178,8 @@
                                       <li class="dropdown more-dropdown-sub">
                                           <a href="javascript:;"> Sort final </a>
                                           <ul class="dropdown-menu">
-                                            <li><a href="#">Ajouter</a></li>
-                                            <li><a href="#">Liste</a></li>
+                                            <li><a href="{{ path('sortfinal_new')}}">Ajouter</a></li>
+                                            <li><a href="{{ path('sortfinal_index')}}">Liste</a></li>
                                           </ul>
                                       </li>
                                     </ul>
