--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -41,7 +41,7 @@
                 <i class="widget-thumb-icon bg-green icon-bulb"></i>
                 <div class="widget-thumb-body">
                     <span class="widget-thumb-subtitle"></span>
-                    <span class="widget-thumb-body-stat" data-counter="counterup" data-value="7,644">0</span>
+                    <span class="widget-thumb-body-stat" data-counter="counterup" data-value="{{ nbEpi }}">0</span>
                 </div>
             </div>
         </div>
