--- a/app/Resources/views/BOLayout.html.twig
+++ b/app/Resources/views/BOLayout.html.twig
@@ -151,8 +151,8 @@
                                       <li class="dropdown more-dropdown-sub">
                                           <a href="javascript:;"> Sous-serie </a>
                                           <ul class="dropdown-menu">
-                                            <li><a href="#">Ajouter</a></li>
-                                            <li><a href="#">Liste</a></li>
+                                            <li><a href="{{ path('sousserie_new')}}">Ajouter</a></li>
+                                            <li><a href="{{ path('sousserie_index')}}">Liste</a></li>
                                           </ul>
                                       </li>
                                       <li class="dropdown more-dropdown-sub">
