--- a/app/Resources/views/BOLayout.html.twig
+++ b/app/Resources/views/BOLayout.html.twig
@@ -165,8 +165,8 @@
                                       <li class="dropdown more-dropdown-sub">
                                           <a href="javascript:;"> Côte provisoire </a>
                                           <ul class="dropdown-menu">
-                                            <li><a href="#">Ajouter</a></li>
-                                            <li><a href="#">Liste</a></li>
+                                            <li><a href="{{ path('provisoire_new')}}">Ajouter</a></li>
+                                            <li><a href="{{ path('provisoire_index')}}">Liste</a></li>
                                           </ul>
                                       </li>
                                       <li class="dropdown more-dropdown-sub">
