--- a/app/Resources/views/LoginLayout.html.twig
+++ b/app/Resources/views/LoginLayout.html.twig
@@ -9,7 +9,7 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>{% block title %}Back Office | {% endblock %}</title>
+        <title>{% block title %}ARFIS GED{% endblock %}</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta content="" name="description" />
@@ -34,7 +34,7 @@
         <!-- END PAGE LEVEL STYLES -->
         <!-- BEGIN THEME LAYOUT STYLES -->
         <!-- END THEME LAYOUT STYLES -->
-        <link rel="shortcut icon" href="favicon.ico" />
+        <link rel="shortcut icon" href="{{ asset('ressources/images/favicon.png')}}" />
     </head>
     <!-- END HEAD -->
 
