--- a/app/Resources/views/provisoire/edit.html.twig
+++ b/app/Resources/views/provisoire/edit.html.twig
@@ -71,8 +71,8 @@
                     <span class="required"> * </span>
                   </label>
                   <div class="col-md-8">
-                    {{ form_widget(edit_form.tampon1) }}
-                    {{ form_errors(edit_form.tampon1) }}
+                    {{ form_widget(edit_form.conservation) }}
+                    {{ form_errors(edit_form.conservation) }}
                   </div>
                 </div>
                 <div class="form-group">
@@ -80,8 +80,8 @@
                     <span class="required"> * </span>
                   </label>
                   <div class="col-md-8">
-                    {{ form_widget(edit_form.tampon2) }}
-                    {{ form_errors(edit_form.tampon2) }}
+                    {{ form_widget(edit_form.sousserie) }}
+                    {{ form_errors(edit_form.sousserie) }}
                   </div>
                 </div>
                 <div class="form-group">
