--- a/app/Resources/views/provisoire/new.html.twig
+++ b/app/Resources/views/provisoire/new.html.twig
@@ -71,17 +71,17 @@
                     <span class="required"> * </span>
                   </label>
                   <div class="col-md-8">
-                    {{ form_widget(form.tampon1) }}
-                    {{ form_errors(form.tampon1) }}
+                    {{ form_widget(form.conservation) }}
+                    {{ form_errors(form.conservation) }}
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="control-label col-md-4">Sous serie 
+                  <label class="control-label col-md-4">Sous serie
                     <span class="required"> * </span>
                   </label>
                   <div class="col-md-8">
-                    {{ form_widget(form.tampon2) }}
-                    {{ form_errors(form.tampon2) }}
+                    {{ form_widget(form.sousserie) }}
+                    {{ form_errors(form.sousserie) }}
                   </div>
                 </div>
                 <div class="form-group">
