--- a/app/Resources/views/sousserie/new.html.twig
+++ b/app/Resources/views/sousserie/new.html.twig
@@ -71,8 +71,8 @@
                     <span class="required"> * </span>
                   </label>
                   <div class="col-md-8">
-                    {{ form_widget(form.tampon) }}
-                    {{ form_errors(form.tampon) }}
+                    {{ form_widget(form.serie) }}
+                    {{ form_errors(form.serie) }}
                   </div>
                 </div>
                 <div class="form-group">
@@ -149,4 +149,4 @@
   </script>
 
 
-{% endblock %} 
+{% endblock %}
