--- a/app/Resources/views/epi/new.html.twig
+++ b/app/Resources/views/epi/new.html.twig
@@ -71,8 +71,8 @@
                     <span class="required"> * </span>
                   </label>
                   <div class="col-md-8">
-                    {{ form_widget(form.tampon) }}
-                    {{ form_errors(form.tampon) }}
+                    {{ form_widget(form.rayonnage) }}
+                    {{ form_errors(form.rayonnage) }}
                   </div>
                 </div>
                 <div class="form-group">
