--- a/app/Resources/views/BOLayout.html.twig
+++ b/app/Resources/views/BOLayout.html.twig
@@ -172,8 +172,8 @@
                                       <li class="dropdown more-dropdown-sub">
                                           <a href="javascript:;"> Côte définitive </a>
                                           <ul class="dropdown-menu">
-                                            <li><a href="#">Ajouter</a></li>
-                                            <li><a href="#">Liste</a></li>
+                                            <li><a href="{{ path('definitive_new') }}">Ajouter</a></li>
+                                            <li><a href="{{ path('definitive_index') }}">Liste</a></li>
                                           </ul>
                                       </li>
                                       <li class="dropdown more-dropdown-sub">
