--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -55,7 +55,7 @@
                 <i class="widget-thumb-icon bg-green icon-bulb"></i>
                 <div class="widget-thumb-body">
                     <span class="widget-thumb-subtitle"></span>
-                    <span class="widget-thumb-body-stat" data-counter="counterup" data-value="7,644">0</span>
+                    <span class="widget-thumb-body-stat" data-counter="counterup" data-value="{{ nbProvisoire }}">0</span>
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
                 <i class="widget-thumb-icon bg-green icon-bulb"></i>
                 <div class="widget-thumb-body">
                     <span class="widget-thumb-subtitle"></span>
-                    <span class="widget-thumb-body-stat" data-counter="counterup" data-value="7,644">0</span>
+                    <span class="widget-thumb-body-stat" data-counter="counterup" data-value="{{ nbDefinitive }}">0</span>
                 </div>
             </div>
         </div>
