--- a/app/Resources/views/provisoire/index.html.twig
+++ b/app/Resources/views/provisoire/index.html.twig
@@ -73,7 +73,7 @@
             <tr>
               <td class="text-right">{{ provisoire.id }}</td>
               <td class="text-justify">{{ provisoire.conservation }}</td>
-              <td class="text-justify">{{ provisoire.sousserie }}</td>
+              <td class="text-center">{{ provisoire.sousserie }}</td>
               <td class="text-left"><a href="{{ path('provisoire_edit', { 'id': provisoire.id }) }}">{{ provisoire.libelle }}</a></td>
               <td class="text-center">{{ provisoire.description }}</td>
               <td>
